<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/employer_register_layout_scrollView"
    android:background="@drawable/background_gradient">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/emplr_page_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="Employer Details"
            />
        <LinearLayout
            android:layout_below="@+id/emplr_page_tile"
            android:id="@+id/llorgName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_org_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_name"
                android:textColor="@color/light_gray"
                android:textStyle="bold"

                />
            <EditText
                android:id="@+id/et_org_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llorgType"
            android:layout_below="@+id/llorgName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_org_type"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_org_type"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_org_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llownership"
            android:layout_below="@+id/llorgType"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_ownership"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_ownership"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_ownership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llorgHead"
            android:layout_below="@+id/llownership"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_org_type"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_org_head"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_org_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lldesignation"
            android:layout_below="@+id/llorgHead"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_designation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_designation"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lladdress"
            android:layout_below="@+id/lldesignation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_address"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_o_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llphone"
            android:layout_below="@+id/lladdress"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_e_phone"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_phone"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_e_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lle_email"
            android:layout_below="@+id/llphone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_e_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_e_email"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_e_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llwebsite"
            android:layout_below="@+id/lle_email"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_website"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_website"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lle_username"
            android:layout_below="@+id/llwebsite"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_e_username"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_e_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lle_password"
            android:layout_below="@+id/lle_username"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_e_password"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_e_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bckgrnd"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/lle_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            >
            <Button
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                android:onClick="empRegister"
                android:background="@drawable/btn_backgrnd"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>