<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout_scrollView"
    android:background="@drawable/background_gradient">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/jobseeker_page_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="Job Seeker Details"
        />
    <LinearLayout
        android:layout_below="@id/jobseeker_page_tile"
        android:id="@+id/llname"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/label_name"
        android:textColor="@color/light_gray"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full name"
        android:background="@drawable/editbox_bckgrnd"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llnationality"
        android:layout_below="@id/llname"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_nationality"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_nationality"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nationality"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lldob"
        android:layout_below="@id/llnationality"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_dob"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_dob"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="YYYY/MM/DD"
            android:inputType="date"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llmobile"
        android:layout_below="@id/lldob"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_mobile"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_mobile"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mobile number"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llmaritalStatus"
        android:layout_below="@id/llmobile"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_marital_status"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="gender"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/male"
                android:onClick="gender"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/female"
                android:onClick="gender"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCurrentAddress"
        android:layout_below="@id/llmaritalStatus"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Current Address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_address"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Current Address"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_below="@id/llCurrentAddress"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_email_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/lvabel_email"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llpreferFunctionalArea"
        android:layout_below="@id/llEmail"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_functional_area"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_functional_area"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_functional_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Functional Area"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llusername"
        android:layout_below="@id/llpreferFunctionalArea"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_username"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_username"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llpassword"
        android:layout_below="@id/llusername"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/label_password"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="textPassword"
            android:background="@drawable/editbox_bckgrnd"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/llpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        >
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jRegister"
            android:text="@string/btn_register"
            android:textColor="@color/light_gray"
            android:background="@drawable/btn_backgrnd"
            android:onClick="jRegister"
            />
    </LinearLayout>
</RelativeLayout>
</ScrollView>
